# PogoEnhancer

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties
app/: build.gradle  obfuscator_scripts.txt  proguard-rules.pro  windows_orig.txt
app/libs/: parser-1.6.0.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/headers/cryptopp/: .gitmodules  Application.mk  adv-simd.h  bench1.cpp  bench2.cpp  config.h  cryptlib.h  cryptlib.vcxproj  misc.h  rijndael.cpp  sha.cpp  strciphr.cpp  tea.h  test.cpp  validat3.cpp  validat4.cpp  validate.h
app/src/main/cpp/libs/armeabi-v7a/headers/: frida-gumjs.h
app/src/main/cpp/proto_hook/: Base64.cpp  Base64.h  EncB.cpp  EncB.h  EncQueue.cpp  EncQueue.h  Encryption.cpp  Encryption.h  InfoClient.cpp  InfoClient.h  InjectionSettings.cpp  InjectionSettings.h  Logger.cpp  Logger.h  ProtoCache.cpp  ProtoCache.h  ProtoConverter.cpp  ProtoConverter.h  Scanmodes.h  UnixSender.cpp  UnixSender.h  Util.cpp  Util.h  main.cpp
app/src/main/cpp/proto_hook/HAP/: AbstractHAP.cpp  AbstractHAP.h  HAP64.cpp  HAP64.h  update_offsets.py
app/src/main/cpp/proto_hook/caches/: SharedQueue.hpp
app/src/main/cpp/proto_hook/geometry/: r1interval.h  s1angle_test.cc  s1interval.cc  s1interval.h  s2.cc  s2.h  s2_test.cc  s2cap.cc  s2cap.h  s2cell.cc  s2cell.h  s2cellid.cc  s2cellid.h  s2edgeutil.cc  s2edgeutil.h  s2latlng.cc  s2latlngrect.cc  s2latlngrect.h
app/src/main/cpp/proto_hook/geometry/base/: basictypes.h  casts.h  docid.h  logging.cc  logging.h  port.h
app/src/main/cpp/proto_hook/geometry/strings/: ascii_ctype.h  split.cc  split.h  stringprintf.h  strutil.cc  strutil.h
app/src/main/cpp/proto_hook/geometry/util/coding/: coder.cc  coder.h  varint.cc  varint.h
app/src/main/cpp/proto_hook/geometry/util/endian/: endian.h
app/src/main/cpp/proto_hook/geometry/util/hash/: hash_jenkins_lookup2.h
app/src/main/cpp/proto_hook/geometry/util/math/: mathlimits.h  mathutil.h  matrix3x3-inl.h  vector2-inl.h  vector2.h  vector3-inl.h  vector3.h  vector4.h
app/src/main/cpp/proto_hook/gumpp/: gumpp.hpp
app/src/main/cpp/proto_hook/gumpp_new/: AbstractBacktracer.h  AbstractInterceptor.h  AbstractInvocationContext.h  AbstractInvocationListener.h  AbstractProfiler.h  AbstractSampler.h  AbstractSanityChecker.h  BacktracerImpl.hpp  CallCountSampler.h  InspectorCallbacks.h  InterceptorImpl.h  InvocationContext.h  InvocationListenerIface.h  InvocationListenerProxy.cpp  InvocationListenerProxy.h  ObjectWrapper.hpp  PodWrapper.hpp  ProfileReportImpl.h  RefPtr.h  Runtime.cpp  Runtime.h  SymbolUtil.h  structs.h
app/src/main/cpp/proto_hook/il2cpp/: class-internals.h  il2cpp-config.h  il2cppStructs.h  object-internals.h
app/src/main/cpp/proto_hook/il2cpp/codegen/: il2cpp-codegen.h
app/src/main/cpp/proto_hook/il2cpp/icalls/mscorlib/Mono/: Runtime.h
app/src/main/cpp/proto_hook/il2cpp/icalls/mscorlib/Mono.Globalization.Unicode/: Normalization.h
app/src/main/cpp/proto_hook/il2cpp/icalls/mscorlib/Mono.Interop/: ComInteropProxy.h
app/src/main/cpp/proto_hook/il2cpp/icalls/mscorlib/Mono.Security.Cryptography/: KeyPairPersistence.h
app/src/main/cpp/proto_hook/il2cpp/icalls/mscorlib/System/: Activator.h  __ComObject.h
app/src/main/cpp/proto_hook/il2cpp/utils/: ThreadSafeFreeList.h
app/src/main/cpp/proto_hook/il2cpp_util/: Il2CppAddresses.hpp  Il2CppAssembly.hpp  Il2CppClass.hpp  Il2CppDomain.hpp  Il2CppImage.hpp  Il2CppUtil.hpp
app/src/main/cpp/proto_hook/include/: frida-selinux.h
app/src/main/cpp/proto_hook/include/curl/: Makefile
app/src/main/cpp/proto_hook/ipc/: InfoServer.cpp  InfoServer.h
app/src/main/cpp/proto_hook/listeners/: BreakoutFromPokeball.cpp  BreakoutFromPokeball.h  BuddyPokemonServiceListener.cpp  BuddyPokemonServiceListener.h  BuddyRpcServiceListener.cpp  BuddyRpcServiceListener.h  BuddySettingsServiceListener.cpp  BuddySettingsServiceListener.h  CombatDirector.cpp  CombatDirector.h  CombatDirectorV2Listener.cpp  CombatDirectorV2Listener.h  DailyGetCpListener.cpp  DailyGetCpListener.h  EasyCatchType.h  EncounterInit.cpp  EncounterInit.h  EnhancedThrowType.h  FLp_ioListener.cpp  FLp_ioListener.h  FastCatchType.h  FormPossible.cpp  FormPossible.h  GMoCi.cpp  GMoCi.h  GRscGSoListener.cpp  GRscGSoListener.h  GWp.cpp  GWp.h  GetItemBagListener.cpp  GetItemBagListener.h  IlLl.cpp  IlLl.h  IncidentGetCpListener.cpp  IncidentGetCpListener.h  ItemBagInstanceListener.cpp  ItemBagInstanceListener.h  MemDerp.cpp  MemDerp.h  OpenBuddyGiftOutProto.cpp  (+35 more)
app/src/main/cpp/proto_hook/listeners/shared/: AutoFeed.cpp  AutoFeed.h  IncenseMapPokemon.cpp  IncenseMapPokemon.h  ItemRemover.cpp  ItemRemover.h  Items.h  LocProv.cpp  LocProv.h  PokemonProto.cpp  PokemonProto.h  Stop.cpp  Stop.h  StringHelper.cpp  StringHelper.h  Throw.h  WildMapPokemon.cpp  WildMapPokemon.h  WildMonProto.cpp  WildMonProto.h
app/src/main/res/drawable/: ic_child_friendly_black_24dp.xml  ic_clock.xml  ic_cloud_moon_solid.xml  ic_cloud_showers_heavy_solid.xml  ic_cloud_solid.xml  ic_cloud_sun_solid.xml  ic_dialog_close.xml  ic_dizzy_solid.xml  ic_drag.xml  ic_frown_solid.xml  ic_grin_beam_solid.xml  ic_iv_overlay.xml  ic_joytick.xml  ic_location.xml  ic_location_on_white_24dp.xml  ic_location_searching_black_24dp.xml  ic_lock_open_white_24dp.xml  ic_lock_white_24dp.xml  ic_mad_logo_round.xml  ic_map.xml  ic_map_location.xml  ic_moon_solid.xml  ic_radar.xml  ic_remove_red_eye_red_24dp.xml  ic_route.xml  ic_runner.xml  ic_shiny.xml  ic_shiny_white.xml  (+669 more)
injection/: update_libs.sh
injection/ARMEABI/: Makefile
injection/ARMEABI/jni/: Application.mk
injection/ARMEABI/jni/injector/: frida-core.h  inject-lib.c
injection/latest/ARM64/jni/: Application.mk
injection/old_android/: README.md
mock_patch/: frida_debugging_script.js  script_to_use.js  transform_script_for_c.py  transformed.js  update_libs.sh
mock_patch/ARM64/: Makefile
mock_patch/ARM64/jni/injector/: frida-core.h  inject-lib.c
mock_patch/ARMEABI/jni/: Application.mk
mock_patch/ARMEABI/jni/injector/: Android.mk  inject-lib.c
shared/: build.gradle  proguard-rules.pro
(+178 files in other folders)
